--- a/MessiahSolutionsComFrontEnd/Views/home.cshtml
+++ b/MessiahSolutionsComFrontEnd/Views/home.cshtml
@@ -319,7 +319,9 @@
             </a>
         </div>
         <!-- Owl Carousel-->
-        <div class="owl-carousel owl-carousel-team" data-autoplay="true" data-items="1" data-md-items="2" data-lg-items="3" data-xl-items="4" data-xxl-items="6" data-stage-padding="0" data-loop="true" data-margin="30" data-mouse-drag="false" data-dots="true">
+        <div class="owl-carousel owl-carousel-team" data-autoplay="true" data-items="1" data-md-items="2" data-lg-items="3" 
+             data-xl-items="4" data-xxl-items="6" data-stage-padding="0" data-loop="false" data-margin="30" 
+             data-mouse-drag="true" data-dots="true">
 
             @if (Model.FeaturedPeople != null)
             {
